<resources>
    <string name="app_name">SIAGA</string>
    <string name="masuk">Masuk</string>
    <string name="absen_harus_foto_selfie_ya">Absen harus Foto Selfie ya!</string>
    <string name="todo">TODO</string>
    <string name="ambil_foto_selfie">Ambil Foto Selfie</string>
    <string name="password">Password</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukan_nip">Masukan NIP</string>
    <string name="welcome_to_siaga">Welcome to SIAGA</string>
    <string name="Selamat_Datang_Di_siaga">Selamat Datang Di SIAGA</string>
    <string name="sistem">Sistem Informasi Absensi peGAwai</string>
    <string name="kpu">KPU Provinsi Jambi</string>
    <string name="dropdown">dropdown</string>
    <string name="otp">Kirim OTP</string>

    <string-array name="jenis_keterangan">
        <item>Cuti</item>
        <item>Dinas</item>
        <item>Sakit</item>
    </string-array>
</resources>